--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@supabase/ssr": "^0.7.0",
     "date-fns": "^4.1.0",
     "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
